"Couldn't set association for project. Check the file is writeable." for .uproject

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,5 @@ Session.vim
 /Plugins/SailClothSimulation/Intermediate
 /Content
 /Plugins/SailClothSimulation/Binaries
+/Sailing.uproject
+/Sailing.uproject
